--- a/Simplified Amortization/simplified_amortization_10000_0.005.ipynb
+++ b/Simplified Amortization/simplified_amortization_10000_0.005.ipynb
@@ -17,14 +17,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AaPFL45byVou",
-        "outputId": "4f98f283-0f1a-4b17-e542-665b7e0a6734"
+        "outputId": "8f63c4ed-ecb9-42b1-9183-170887a6cb0c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "/content/drive/MyDrive/Thesis/probabilistic_harmony_model\n"
           ]
         }
@@ -43,21 +43,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjiaiXiekk2L",
-        "outputId": "014b9483-2b4d-40c6-e3dd-b01c207d2125"
+        "outputId": "f021b148-44b0-4840-cb63-d6bc514b4107"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting pyro-api==0.1.2\n",
-            "  Downloading pyro_api-0.1.2-py3-none-any.whl (11 kB)\n",
-            "Installing collected packages: pyro-api\n",
-            "Successfully installed pyro-api-0.1.2\n",
-            "Collecting pyro-ppl==1.8.4\n",
-            "  Downloading pyro_ppl-1.8.4-py3-none-any.whl (730 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m730.7/730.7 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.7 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (1.23.5)\n",
+            "Requirement already satisfied: pyro-api==0.1.2 in /usr/local/lib/python3.10/dist-packages (0.1.2)\n",
+            "Requirement already satisfied: pyro-ppl==1.8.4 in /usr/local/lib/python3.10/dist-packages (1.8.4)\n",
+            "Requirement already satisfied: numpy>=1.7 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (1.23.5)\n",
             "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (3.3.0)\n",
             "Requirement already satisfied: pyro-api>=0.1.1 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (0.1.2)\n",
             "Requirement already satisfied: torch>=1.11.0 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (2.1.0+cu121)\n",
@@ -71,13 +66,8 @@
             "Requirement already satisfied: triton==2.1.0 in /usr/local/lib/python3.10/dist-packages (from torch>=1.11.0->pyro-ppl==1.8.4) (2.1.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.11.0->pyro-ppl==1.8.4) (2.1.4)\n",
             "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=1.11.0->pyro-ppl==1.8.4) (1.3.0)\n",
-            "Installing collected packages: pyro-ppl\n",
-            "Successfully installed pyro-ppl-1.8.4\n",
-            "Collecting pitchtypes==0.4.0\n",
-            "  Downloading pitchtypes-0.4.0-py3-none-any.whl (39 kB)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from pitchtypes==0.4.0) (1.23.5)\n",
-            "Installing collected packages: pitchtypes\n",
-            "Successfully installed pitchtypes-0.4.0\n"
+            "Requirement already satisfied: pitchtypes==0.4.0 in /usr/local/lib/python3.10/dist-packages (0.4.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from pitchtypes==0.4.0) (1.23.5)\n"
           ]
         }
       ],
@@ -133,7 +123,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b_4XJwwNmXT4",
-        "outputId": "ef45c37e-2aa9-498c-bd9a-ed1c24bfbd43"
+        "outputId": "fca75c29-ad22-42c7-bb65-cbc977499adf"
       },
       "outputs": [
         {
@@ -230,55 +220,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "hx_WSJBPtsdC"
-      },
-      "outputs": [],
-      "source": [
-        "# def simplified_chord_model(npcs, nharmonies, data, subsamples=500, **kwargs):\n",
-        "#     # parameters priors:\n",
-        "#     # distribution of the harmonies\n",
-        "#     # p_harmony = pyro.sample('p_harmony', dist.Dirichlet(torch.ones(nharmonies, device=device)))\n",
-        "#     # distribution of notes in the harmonies (chord profiles)\n",
-        "#     with pyro.plate(\"harmonies\", nharmonies):\n",
-        "#         chord_profiles = pyro.sample(\"theta\", dist.Dirichlet(torch.ones(nharmonies, npcs, device=device)))\n",
-        "\n",
-        "#     # Sampling the data:\n",
-        "#     nchords = len(data['c'])\n",
-        "#     #subs = min(nchords, subsamples)\n",
-        "#     #with pyro.plate('data', nchords, subsample_size=subs) as ind:\n",
-        "#     with pyro.plate(\"chords\", nchords) as ind:\n",
-        "#         # sample a chord type based on the harmony distribution (to be inferred)\n",
-        "#         # c = pyro.sample('c', dist.Categorical(p_harmony))\n",
-        "#         # sample chord types from a uniform categorical distribution\n",
-        "#         c = pyro.sample('c', dist.Categorical(torch.ones(nharmonies, device=device) / nharmonies))\n",
-        "\n",
-        "#         # sampling pitches for the chord based on the selected chord type profile\n",
-        "#         pyro.sample('notes', dist.Multinomial(1, chord_profiles[c], validate_args=False), obs=data['pitches'][ind])"
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "def simplified_chord_model(nharmonies, nchords, data):\n",
+        "  # parameters priors:\n",
+        "  # distribution of the harmonies\n",
         "  p_harmony = pyro.sample('p_harmony', dist.Dirichlet(torch.ones(nharmonies, device=device)))\n",
-        "  # sample types\n",
+        "\n",
+        "  # distribution of notes in the harmonies (chord profiles)\n",
         "  with pyro.plate(\"harmonies\", nharmonies):\n",
         "    chord_profiles = pyro.sample(\"theta\", dist.Dirichlet(torch.ones(npcs, device=device)))\n",
         "\n",
-        "  # sample chords\n",
+        "  # Sampling the data:\n",
         "  nchords = len(data['c'])\n",
         "  with pyro.plate(\"chords\", nchords) as ind:\n",
-        "    # sample type according to type prevalence\n",
+        "    # sample a chord type based on the harmony distribution (to be inferred)\n",
+        "    # c = pyro.sample('c', dist.Categorical(p_harmony))\n",
+        "    # sample chord types from a uniform categorical distribution\n",
         "    c = pyro.sample(\"c\", dist.Categorical(torch.ones(nharmonies, device=device) / nharmonies))\n",
-        "    # sample notes according to type\n",
+        "\n",
+        "    # sampling pitches for the chord based on the selected chord type profile\n",
         "    pyro.sample(\"notes\", dist.Multinomial(1, chord_profiles[c], validate_args=False), obs=data['pitches'][ind])"
       ],
       "metadata": {
         "id": "RdawwQfmPMHo"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -300,66 +266,26 @@
       "metadata": {
         "id": "F95RZVhph127"
       },
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "k8Z98hgM3qmo"
-      },
-      "outputs": [],
-      "source": [
-        "# class AmortizationNetwork(nn.Module):\n",
-        "#     def __init__(self, input_dim, hidden_dim, output_dim):\n",
-        "#         super().__init__()\n",
-        "#         self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
-        "#         self.fc2 = nn.Linear(hidden_dim, output_dim)\n",
-        "\n",
-        "#     def forward(self, x):\n",
-        "#         x = torch.relu(self.fc1(x))\n",
-        "#         x = torch.softmax(self.fc2(x), dim=-1)\n",
-        "#         return x"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# class AmortizedChordGuide(nn.Module):\n",
-        "#     def __init__(self, npcs, nharmonies):\n",
-        "#         super(AmortizedChordGuide, self).__init__()\n",
-        "#         self.net = AmortizationNetwork(input_dim=npcs, hidden_dim=32, output_dim=nharmonies)\n",
-        "#         self.net.to(device)\n",
-        "#         pyro.module(\"net\", self.net)\n",
-        "\n",
-        "#     def guide(self, npcs, nharmonies, data, subsamples=500, **kwargs):\n",
-        "#         alpha_h = pyro.param('alpha_h', torch.ones(nharmonies, device=device), constraint=constraints.positive)\n",
-        "#         pyro.sample('p_harmony', dist.Dirichlet(alpha_h))\n",
-        "\n",
-        "#         alpha_phi = pyro.param('alpha_phi', torch.ones(nharmonies, npcs, device=device), constraint=constraints.positive)\n",
-        "#         with pyro.plate('harmonies', nharmonies):\n",
-        "#             types = pyro.sample('theta', dist.Dirichlet(alpha_phi))\n",
-        "\n",
-        "#         nchords = len(data['c'])\n",
-        "#         subs = min(nchords, subsamples)\n",
-        "#         with pyro.plate('data', nchords, subsample_size=subs) as ind:\n",
-        "#             chord_features = data['pitches']\n",
-        "#             chord_type_params = self.net(chord_features[ind])\n",
-        "#             labels = pyro.sample('c', dist.Categorical(probs=chord_type_params))\n",
-        "\n",
-        "#         return types, labels, alpha_h, alpha_phi"
-      ],
-      "metadata": {
-        "id": "I1alHScQIV8V"
-      },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "class AmortizedChordGuide(nn.Module):\n",
+        "#   def __init__(self, nharmonies):\n",
+        "#         super().__init__()\n",
+        "#         hidden = 32\n",
+        "#         self.f = nn.Sequential(\n",
+        "#             nn.Linear(npcs, hidden),\n",
+        "#             nn.ReLU(),\n",
+        "#             nn.Linear(hidden, nharmonies),\n",
+        "#             nn.Softmax(dim=-1)\n",
+        "#         )\n",
+        "\n",
+        "#   def forward(self, x):\n",
+        "#         return self.f(normalize_notes(x))\n",
+        "\n",
         "  def __init__(self, nharmonies):\n",
         "      super().__init__()\n",
         "      hidden = 32\n",
@@ -387,15 +313,15 @@
         "      nchords = len(data['c'])\n",
         "      subs = min(500, nchords)\n",
         "      with pyro.plate(\"chords\", nchords, subsample_size=subs) as ind:\n",
-        "        params_c = self.forward(data['pitches'][ind])\n",
-        "        pyro.sample(\"c\", dist.Categorical(params_c))\n",
+        "        chord_type_params = self.forward(data['pitches'][ind])\n",
+        "        pyro.sample(\"c\", dist.Categorical(chord_type_params))\n",
         "\n",
         "      return alpha_phi, alpha_h"
       ],
       "metadata": {
         "id": "BN-cphIpFNdr"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -410,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {
         "id": "ybKoKUgKyhPB"
       },
@@ -446,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {
         "id": "DX1dqkvnyatB"
       },
@@ -491,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {
         "id": "yRbJ3f6QqRqW"
       },
@@ -520,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {
         "id": "pKJ-EUkQq8pE"
       },
@@ -584,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 14,
       "metadata": {
         "id": "TnCfRU_MQtm8"
       },
@@ -611,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 15,
       "metadata": {
         "id": "W0UKUeY0r-kn"
       },
@@ -660,13 +586,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GEi4jjA_yEfP",
-        "outputId": "5728c5e5-44a6-4eed-e906-c929f5d8cb15"
+        "outputId": "0be79599-6f60-474d-a526-2e1d5129a606"
       },
       "outputs": [
         {
@@ -686,21 +612,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 504
         },
         "id": "Y_jYW4TetpZF",
-        "outputId": "fbb2fbe6-ba08-4a16-d773-234aea412504"
+        "outputId": "3a227f43-96a8-45f4-d42c-495ea0d1dd39"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 10000/10000 [03:24<00:00, 48.91it/s]\n"
+            "100%|██████████| 10000/10000 [03:16<00:00, 50.86it/s]\n"
           ]
         },
         {
@@ -733,9 +659,9 @@
           "height": 957
         },
         "id": "Vi1WBlSgQkuS",
-        "outputId": "52b11af9-4d64-4f00-ba40-22ba6b27cb79"
+        "outputId": "54a6d770-16bf-4af3-c54f-a93448ec7e0b"
       },
-      "execution_count": 30,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -761,14 +687,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "2Wn1Q5RjOk4b",
-        "outputId": "d7e7305d-9908-44ce-ae18-6008620d30c7"
+        "outputId": "51f7d602-150f-4ed7-bfc0-b72930bcd05d"
       },
       "outputs": [
         {
