--- a/TDP/tdp_pruning.ipynb
+++ b/TDP/tdp_pruning.ipynb
@@ -253,9 +253,22 @@
         "id": "iYOnoo4fIEtl"
       },
       "source": [
-        "## Adding amortization:\n",
+        "## Adding amortization with Truncated Dirichlet Process:\n",
         "At least chord types is unknown now"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Parameter Initialization:** Initially, the prior weights for the TDP are defined (`weights_prior`), which are a vector of α (`alpha`) values. Alpha is the concentration parameter that controls the dispersion of the distribution, this influences the propensity to generate new chord types.\n",
+        "\n",
+        "**Weight Sampling**: In the code, weights are sampled through a Dirichlet distribution (`weights = pyro.sample('weights', dist.Dirichlet(weights_prior))`), which is a key step in the TDP. In the stick-breaking perspective, these weights correspond to the lengths of \"sticks\".\n",
+        "\n",
+        "**Weight Normalization**: Within the specified maximum number of chords (`max_nharmonies`), the weight of each chord is calculated and normalized (`c_weights = weights / weights.sum()`), to ensure their sum equals 1. This can be seen as a truncated stick-breaking process, where we only consider the first max_nharmonies \"sticks\"."
+      ],
+      "metadata": {
+        "id": "pf5FdZAh6iPd"
+      }
     },
     {
       "cell_type": "code",
